stop using factories