@@ -23,7 +23,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <kotlin>1.9.24</kotlin>
+        <kotlin>2.0.21</kotlin>
         <maven>3.9.8</maven>
         <gauge.java>0.11.2</gauge.java>
         <kotest>5.8.1</kotest>
@@ -177,21 +177,11 @@
                         <phase>test-compile</phase>
                     </execution>
                 </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-maven-allopen</artifactId>
-                        <version>${kotlin}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
-                <configuration>
-                    <argLine>--add-opens java.base/java.nio.file=ALL-UNNAMED</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
